# iniHandler

./: CMakeLists.txt  LICENSE  iniHandler.cpp  iniHandler.h
